--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,7 @@ staticman:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
   path                   : # blank (default) uses feed.xml
+remote_theme             : "mmistakes/jekyll-theme-basically-basic@1.4.5"
 
 # SEO Related
 google_site_verification :
