--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,8 +1,9 @@
 # Authors
 
 Suzanna Parkinson:
-  name        : "Suzanna Parkinson"
+  name          : "Suzanna Parkinson"
   # uri         : "http://name.com"
   # email       : "name@name.com"
   # bio         : "This is the first name."
-  avatar      : "sue.png"
+  googlescholar : "https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AILGF5Vy1XbsHu51JaAbakx22Xl1JWC-3BG0Fk5-mq4F-4xmnB2phpFv9IXPFClfd70datYFh-mVDlKtAdoPqMkuV5gt&user=spRkSy4AAAAJ"
+  avatar        : "sue.png"
