--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,4 +6,4 @@ Suzanna Parkinson:
   # email       : "name@name.com"
   # bio         : "This is the first name."
   googlescholar : "https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AILGF5Vy1XbsHu51JaAbakx22Xl1JWC-3BG0Fk5-mq4F-4xmnB2phpFv9IXPFClfd70datYFh-mVDlKtAdoPqMkuV5gt&user=spRkSy4AAAAJ"
-  avatar        : "sue.png"
+  avatar        : "headshot2024.png"
