--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Presentations"
     url: /talks/    
 
 #   - title: "Teaching"
 #     url: /teaching/    
     
-#   - title: "CV"
-#     url: /cv/
+  - title: "CV"
+    url: /cv/
