--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Suzanna Parkinson"
-  avatar           : "headshot2024.png"
+  avatar           : "headshot2024.jpg"
   bio              : "Computational and Applied Math PhD Candidate"
   location         : "University of Chicago"
   employer         :
